--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,7 @@
   --popover-foreground: oklch(0.145 0 0);
   --primary: #3A4DED;
   --primary-foreground: #ffffff;
-  --secondary: oklch(0.97 0 0);
+  --secondary: #6977f1;
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
